rsbinder/src/sys/sys.rs

#[test]
fn bindgen_test_layout_flat_binder_object__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<flat_binder_object__bindgen_ty_1>(),
        8usize,
        concat!("Size of: ", stringify!(flat_binder_object__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<flat_binder_object__bindgen_ty_1>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(flat_binder_object__bindgen_ty_1)
        )
    );
    fn test_field_binder() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<flat_binder_object__bindgen_ty_1>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).binder) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(flat_binder_object__bindgen_ty_1),
                "::",
                stringify!(binder)
            )
        );
    }
    test_field_binder();
    fn test_field_handle() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<flat_binder_object__bindgen_ty_1>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).handle) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(flat_binder_object__bindgen_ty_1),
                "::",
                stringify!(handle)
            )
        );
    }
    test_field_handle();
}
#[test]
fn bindgen_test_layout_flat_binder_object() {
    assert_eq!(
        ::std::mem::size_of::<flat_binder_object>(),
        24usize,
        concat!("Size of: ", stringify!(flat_binder_object))
    );
    assert_eq!(
        ::std::mem::align_of::<flat_binder_object>(),
        8usize,
        concat!("Alignment of ", stringify!(flat_binder_object))
    );
    fn test_field_hdr() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<flat_binder_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).hdr) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(flat_binder_object),
                "::",
                stringify!(hdr)
            )
        );
    }
    test_field_hdr();
    fn test_field_flags() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<flat_binder_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).flags) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(flat_binder_object),
                "::",
                stringify!(flags)
            )
        );
    }
    test_field_flags();
    fn test_field_cookie() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<flat_binder_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).cookie) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(flat_binder_object),
                "::",
                stringify!(cookie)
            )
        );
    }
    test_field_cookie();
}
#[doc = " struct binder_fd_object - describes a filedescriptor to be fixed up."]
#[doc = " @hdr:\tcommon header structure"]
#[doc = " @pad_flags:\tpadding to remain compatible with old userspace code"]
#[doc = " @pad_binder:\tpadding to remain compatible with old userspace code"]
#[doc = " @fd:\t\tfile descriptor"]
#[doc = " @cookie:\topaque data, used by user-space"]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct binder_fd_object {
    pub hdr: binder_object_header,
    pub pad_flags: __u32,
    pub __bindgen_anon_1: binder_fd_object__bindgen_ty_1,
    pub cookie: binder_uintptr_t,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union binder_fd_object__bindgen_ty_1 {
    pub pad_binder: binder_uintptr_t,
    pub fd: __u32,
}
#[test]
fn bindgen_test_layout_binder_fd_object__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<binder_fd_object__bindgen_ty_1>(),
        8usize,
        concat!("Size of: ", stringify!(binder_fd_object__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_fd_object__bindgen_ty_1>(),
        8usize,
        concat!("Alignment of ", stringify!(binder_fd_object__bindgen_ty_1))
    );
    fn test_field_pad_binder() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_fd_object__bindgen_ty_1>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).pad_binder) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_fd_object__bindgen_ty_1),
                "::",
                stringify!(pad_binder)
            )
        );
    }
    test_field_pad_binder();
    fn test_field_fd() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_fd_object__bindgen_ty_1>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).fd) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_fd_object__bindgen_ty_1),
                "::",
                stringify!(fd)
            )
        );
    }
    test_field_fd();
}
#[test]
fn bindgen_test_layout_binder_fd_object() {
    assert_eq!(
        ::std::mem::size_of::<binder_fd_object>(),
        24usize,
        concat!("Size of: ", stringify!(binder_fd_object))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_fd_object>(),
        8usize,
        concat!("Alignment of ", stringify!(binder_fd_object))
    );
    fn test_field_hdr() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_fd_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).hdr) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_fd_object),
                "::",
                stringify!(hdr)
            )
        );
    }
    test_field_hdr();
    fn test_field_pad_flags() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_fd_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).pad_flags) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_fd_object),
                "::",
                stringify!(pad_flags)
            )
        );
    }
    test_field_pad_flags();
    fn test_field_cookie() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_fd_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).cookie) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_fd_object),
                "::",
                stringify!(cookie)
            )
        );
    }
    test_field_cookie();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct binder_buffer_object {
    pub hdr: binder_object_header,
    pub flags: __u32,
    pub buffer: binder_uintptr_t,
    pub length: binder_size_t,
    pub parent: binder_size_t,
    pub parent_offset: binder_size_t,
}
#[test]
fn bindgen_test_layout_binder_buffer_object() {
    assert_eq!(
        ::std::mem::size_of::<binder_buffer_object>(),
        40usize,
        concat!("Size of: ", stringify!(binder_buffer_object))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_buffer_object>(),
        8usize,
        concat!("Alignment of ", stringify!(binder_buffer_object))
    );
    fn test_field_hdr() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_buffer_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).hdr) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_buffer_object),
                "::",
                stringify!(hdr)
            )
        );
    }
    test_field_hdr();
    fn test_field_flags() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_buffer_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).flags) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_buffer_object),
                "::",
                stringify!(flags)
            )
        );
    }
    test_field_flags();
    fn test_field_buffer() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_buffer_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).buffer) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_buffer_object),
                "::",
                stringify!(buffer)
            )
        );
    }
    test_field_buffer();
    fn test_field_length() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_buffer_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).length) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_buffer_object),
                "::",
                stringify!(length)
            )
        );
    }
    test_field_length();
    fn test_field_parent() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_buffer_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).parent) as usize - ptr as usize
            },
            24usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_buffer_object),
                "::",
                stringify!(parent)
            )
        );
    }
    test_field_parent();
    fn test_field_parent_offset() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_buffer_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).parent_offset) as usize - ptr as usize
            },
            32usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_buffer_object),
                "::",
                stringify!(parent_offset)
            )
        );
    }
    test_field_parent_offset();
}
pub const BINDER_BUFFER_FLAG_HAS_PARENT: _bindgen_ty_3 = 1;
pub type _bindgen_ty_3 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct binder_fd_array_object {
    pub hdr: binder_object_header,
    pub pad: __u32,
    pub num_fds: binder_size_t,
    pub parent: binder_size_t,
    pub parent_offset: binder_size_t,
}
